--- a/layout/styles/layout.css
+++ b/layout/styles/layout.css
@@ -42,8 +42,8 @@ img{margin:0; padding:0; border:none;}
 
 div.wrapper{display:block; width:100%; text-align:left;}
 div.wrapper h1, div.wrapper h2, div.wrapper h3, div.wrapper h4, div.wrapper h5, div.wrapper h6{margin:0 0 15px 0; padding:0; font-size:20px; font-weight:normal; line-height:normal;}
-.row1{color:#5F8EC2; background-color:#03274B;}
-.row1 a{color:#F8F9F3; background-color:#03274B;}
+.row1{color:#5F8EC2; background-color:#03274B}/*#03274B*/
+.row1 a{color:#F8F9F3; background-color:#03274B;} /* #03274B */
 .row2{color:#F8F9F3; background-color:#072C53; border-top:1px solid #2B4D71; border-bottom:1px solid #2B4D71;}
 .row3{color:#777777; background:url("images/featured_slide_bg.gif") top left repeat-x #F8F9F3;}
 .row4{color:#777777; background-color:#F8F9F3; border-bottom:2px solid #03274B;}
